# yaru-colors-folder-color

./: .gitignore  README.md  setup.py
Package/yaru-colors-folder-color/: .version
Package/yaru-colors-folder-color/debian/: changelog  control  copyright  files  install
debian/: changelog  control  copyright  postinst
src/: meson.build  meson_options.txt
src/common/: colorize-dummy-svg.py  meson.build
src/gtk/: meson.build
src/icons/: meson.build
src/icons/src/common/: folder-colors.css
src/icons/src/fullcolor/: render-bitmaps.py
src/icons/src/gtk/src/: meson.build.first
src/icons/src/gtk/upstream/gtk-4.0/Adwaita/: _colors.scss
src/icons/src/icons/: meson.build
src/icons/src/symlinks/: generate-symlinks.sh
src/icons/src/symlinks/fullcolor/: places.list
src/icons/upstream/: adwaita-symbolics.list
